2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* config/snippet: Add directory.

2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* gnulib/*, config/gnulib/*: upgrade gnulib to
	  3fe906e98202a591a6a14010aec1538adfd821b6.

2013-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Add that both flush-threshold-dumped
	  and flush-threshold-scheduled must be met.

2013-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm (make_plan): Handle latest_fulls.
	* server-src/amvault.pl: Add --latest-fulls option, pass latest_fulls
	  to Amanda::Recovery::Planner::make_plan().
	* man/xml-source/amvault.8.xml: Document --latest-fulls option.

2013-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/ampgsql.8.xml: Add an example.

2013-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Cleanup.

2013-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: CURLE_SSL_CACERT_BADFILE is not defined on older
	  curl.

2013-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Retry on CURLE_SSL_CACERT_BADFILE.

2013-04-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Add --incrs-only argument.
	* man/xml-source/amvault.8.xml: Document --incrs-only argument.

2013-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Do not hopelessly wait 5 seconds if waitpid
	  return -1.

2013-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Use DLE allow-split and device LEOM property.

2013-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix parsing command overwrite with '-'.
	  Fix small --print-source bug.

2013-04-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Missing change for previous patch.

2013-04-15  Jean-Louis Martineau <martineau@zmanda.com>